# Cos2614_Assessment_3

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.h.in  README.md  main.cpp
Scripts/: clear_build_cache.bat  execute_build.bat  fresh_run.bat  generate_build.bat  run.bat
inc/: ApplicationContext.h  MainWindow.h
inc/VehiclesFile/: VehiclesFile.h  VehiclesFileView.h  populateVehiclesFile.h
inc/dialogues/: AddCarDialogue.h  AddMotorcycleDialogue.h  RentVehicleDialogue.h  ReturnVehicleDialogue.h  dialogues.h
inc/vehicles/: Car.h  Motorcycle.h  Vehicle.h  vehicles.h
inc/views/: CarView.h  MotorcycleView.h  VehicleView.h  VehiclesFileView.h  views.h
src/: ApplicationContext.cpp  MainWindow.cpp
src/VehiclesFile/: VehiclesFileView.cpp  addCar.cpp  addMotorcycle.cpp  clear.cpp  core.cpp  fileIO.cpp  populateVehiclesFile.cpp  removeVehicle.cpp  rentVehicleById.cpp  returnVehicleById.cpp  searchVehicleById.cpp
src/dialogues/: AddCarDialogue.cpp  AddMotorcycleDialogue.cpp  RentVehicleDialogue.cpp  ReturnVehicleDialogue.cpp
src/vehicles/: Car.cpp  Motorcycle.cpp  Vehicle.cpp
src/views/: CarView.cpp  MotorcycleView.cpp  VehicleView.cpp  VehiclesFileView.cpp
